--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,10 +77,12 @@ body {
   position: fixed;
   right: 10rem;
   bottom: 10rem;
-  border: 1px solid #777;
+  border: 1px solid #55c57a;
   border-radius: 1rem;
   padding: 2rem;
   box-shadow: 0.1rem 0.1rem 1rem #55c57a;
+  background-color: rgba(255, 255, 255, 0.75);
+  z-index: 777;
 }
 .alert_close {
   position: absolute;
@@ -445,10 +447,10 @@ body {
   background-color: #eee;
 }
 .dashboard {
-  width: 70%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5rem;
+  margin-top: 3rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 3rem;
@@ -460,43 +462,61 @@ body {
   grid-column: 1 / -1;
 }
 .dashboard__welcome {
-  margin-bottom: 5rem;
+  margin-bottom: 2.5rem;
   grid-column: 1 / -1;
 }
 .dashboard__subheading--requests {
   font-size: 1.6rem;
   margin-bottom: 1rem;
-  grid-column: 1 / -1;
+  grid-column: 1 / 2;
 }
 .dashboard__subheading--issues {
   font-size: 1.6rem;
   margin-bottom: 1rem;
-  grid-column: 1 / 2;
-}
-.dashboard__subheading--workedOn {
-  font-size: 1.6rem;
-  margin-bottom: 1rem;
-  grid-column: 2 / -1;
+  grid-column: 1 / -1;
 }
 .dashboard__requests {
   border: 2px solid #eee;
   border-radius: 4px;
   padding: 1rem;
-  grid-column: 1 / -1;
+  grid-column: 1 / 2;
   margin-bottom: 5rem;
+  display: flex;
+  justify-content: space-between;
 }
-.dashboard__requests a {
-  color: #000;
+.dashboard__requests a,
+.dashboard__requests a:visited {
+  color: #fff;
   text-decoration: none;
-}
-.dashboard__requests a:hover {
-  text-decoration: underline;
+  border-radius: 0.5rem;
+  padding: 2px 0.5rem;
 }
 .dashboard__issues {
   border: 2px solid #eee;
   border-radius: 4px;
-  grid-column: 1 / 2;
+  grid-column: 1 / -1;
   padding: 1rem;
+  border-collapse: collapse;
+}
+.dashboard__issues--headings th {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border: 1px solid #eee;
+}
+.dashboard__issues--rows:hover {
+  background-color: #eee;
+}
+.dashboard__issues--rows td {
+  text-align: center;
+  border: 1px solid #eee;
+}
+.dashboard__issues--rows td a,
+.dashboard__issues--rows td a:visited {
+  text-decoration: none;
+  color: black;
+}
+.dashboard__issues--nil {
+  text-align: center;
 }
 .dashboard__workedOn {
   border: 2px solid #eee;
@@ -727,7 +747,7 @@ body {
   display: none;
 }
 .toggle__button {
-  z-index: 9999;
+  z-index: 999;
   background-color: #f7f7f7;
   width: 5rem;
   height: 5rem;
@@ -779,7 +799,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 8888;
+  z-index: 888;
   transition: width 0.3s;
   overflow: hidden;
 }
